--- a/projects/node/pi-gpt/views/guess.ejs
+++ b/projects/node/pi-gpt/views/guess.ejs
@@ -35,7 +35,7 @@
             } else if (userGuess === randomNumber) {
                 message = "Congratulations! You guessed it right!";
             } else if (userGuess === altGuess) {
-                message = `Wack, you hella gave up. The correct number was ${randomNumber}`;
+                message = `Wack, you hella gave up. The correct number was ${randomNumber}`doc;
             } else if (userGuess < randomNumber) {
                 message = "Too low! Try again.";
             } else {
