--- a/projects/node/pi-gpt/views/index.ejs
+++ b/projects/node/pi-gpt/views/index.ejs
@@ -18,9 +18,9 @@
         </nav>
     </header>
 
-    <section id="features" class="py-5">
+    <section id="desc" class="py-5">
         <div class="container">
-            <h2 class="text-center">Features</h2>
+            <h2 class="text-center">Intro</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
@@ -30,11 +30,35 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="features" class="py-5">
+        <div class="container">
+            <h2 class="text-center">Features</h2>
+            <div class="row">
                 <div class="col-md-4">
                     <a href="/guess" class="card text-dark">
-                        <div class="card-bod y">
+                        <div class="card-body">
                             <h5 class="card-title">Guess</h5>
                             <p class="card-text">Go try to guess a number!</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="/cool" class="card text-dark">
+                        <div class="card-body">
+                            <h5 class="card-title">Cool Image</h5>
+                            <p class="card-text">Just a man and his dog</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a href="/weather" class="card text-dark">
+                        <div class="card-body">
+                            <h5 class="card-title">What's the weather?</h5>
+                            <p class="card-text">Check local weather from server but also your own.</p>
                         </div>
                     </a>
                 </div>
