--- a/projects/node/pi-gpt/views/weather.ejs
+++ b/projects/node/pi-gpt/views/weather.ejs
@@ -19,18 +19,12 @@
 
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center">Server Specifications</h2>
-            <ul class="list-group">
-                <li class="list-group-item"><strong>Hostname:</strong> <%= serverSpecs.hostname %></li>
-                <li class="list-group-item"><strong>Platform:</strong> <%= serverSpecs.platform %></li>
-                <li class="list-group-item"><strong>Architecture:</strong> <%= serverSpecs.architecture %></li>
-                <li class="list-group-item"><strong>Model:</strong> <%= serverSpecs.cpu[0].model %></li>
-                <li class="list-group-item"><strong>CPU:</strong> <%= serverSpecs.cpu.length %> Core(s)</li>
-                <li class="list-group-item"><strong>Total Memory:</strong> <%= serverSpecs.totalMemory %></li>
-                <li class="list-group-item"><strong>Free Memory:</strong> <%= serverSpecs.freeMemory %></li>
-                <li class="list-group-item"><strong>Uptime:</strong> <%= serverSpecs.uptime %></li>
-            </ul>
+            <h2 class="text-center"><%= myWeather.location.name %></h2>
         </div>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Latitude & Longitude</strong> <%= myWeather.location.lat %>,  <%= myWeather.location.lon %></li>
+            <li class="list-group-item"><strong>Local Time</strong> <%= myWeather.location.localtime %></li>
+        </ul>
     </section>
 
     <footer class="bg-dark text-white text-center py-4">
