--- a/projects/node/pi-gpt/views/weather.ejs
+++ b/projects/node/pi-gpt/views/weather.ejs
@@ -19,7 +19,7 @@
 
     <section class="py-5">
         <div class="container">
-            <h2 class="text-center"><%= myWeather.location.name %></h2>
+            <h2 id="location" class="text-center"><%= myWeather.location.name %></h2>
         </div>
         <ul class="list-group">
             <li class="list-group-item"><strong>Latitude & Longitude</strong> <%= myWeather.location.lat %>,  <%= myWeather.location.lon %></li>
