Tabs in Weather

--- a/projects/mcontr_dev/styles/stock.css
+++ b/projects/mcontr_dev/styles/stock.css
@@ -122,7 +122,7 @@ a:hover {
 
 
 .my-button {
-  background-color: #3789ad; /* Green background */
+  background-color: #2b6c88; /* Green background */
   color: white; /* White text */
   border: none; /* No borders */
   border-radius: 5px; /* Rounded corners */
