--- a/projects/finance/webapp/src/app.css
+++ b/projects/finance/webapp/src/app.css
@@ -33,6 +33,10 @@
   }
 }
 
+.my-h2 {
+  width: 100%;
+}
+
 .my-button {
   background-color: #2b6c88; /* Green background */
   color: white; /* White text */
@@ -113,4 +117,31 @@
   border-radius: 3px;
   margin-right: 5px;
   vertical-align: middle;
+}
+
+.my-tab-navigation {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+}
+
+.my-tab-navigation button {
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  margin: 0 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s;
+}
+
+.my-tab-navigation button:hover {
+  background-color: #1e4d66;
+}
+
+.my-tab-navigation button.active {
+  background-color: #103042;
+  transform: scale(1.05);
 }
