--- a/projects/finance/webapp/src/app.css
+++ b/projects/finance/webapp/src/app.css
@@ -18,6 +18,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.logo-spin {
+  animation: logo-spin infinite 20s linear;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
