--- a/projects/node/pi-gpt/views/index.ejs
+++ b/projects/node/pi-gpt/views/index.ejs
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyPy</title>
+    <title>mcontr</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
     <header class="bg-primary text-white text-center py-5">
-        <h1>MyPy Web App</h1>
+        <h1>mcontr Web App</h1>
         <nav>
             <a href="#features" class="btn btn-light">Learn More</a>
             <a href="/info" class="btn btn-light">Server Specs</a> <!-- Link to server specs -->
