UI bug fixes, todo: dashboard

--- a/projects/locals-only-warp/templates/pages/dashboard.html
+++ b/projects/locals-only-warp/templates/pages/dashboard.html
@@ -23,7 +23,7 @@
                     <span class="location-text">{{ user_location.city }}, {{ user_location.state }} {{ user_location.zip_code }}</span>
                     <i class="fas fa-edit location-edit-icon"></i>
                 </div>
-                
+
                 <div class="nav-location-editor hidden" id="locationEditor">
                     <i class="fas fa-location-dot nav-location-icon"></i>
                     <input type="text" id="locationInput" class="location-input" placeholder="Enter new zip code...">
@@ -52,7 +52,7 @@
                 </button>
             </h2>
             <div class="category-grid">
-                <button class="category-bubble active" data-category="restaurants">
+                <button class="category-bubble" data-category="restaurants">
                     <i class="fas fa-utensils"></i>
                     <span>Restaurants</span>
                 </button>
